fixing route and doc API swaggo
