# docs/swagger.json
@@ -33,13 +33,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.JWT"
+                            "$ref": "#/definitions/main"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/main"
                         }
                     }
                 }
@@ -47,11 +47,6 @@
         },
         "/orders":{
             "get": {
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ],
                 "description": "Get all the orders",
                 "consumes": [
                     "application/json"
@@ -70,21 +65,284 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.Video"
+                                "$ref": "#/definitions/models.Orders"
                             }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/dto.Response"
                         }
                     }
                 }
             },
             "post": {
-
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Create a new Orders",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders",
+                    "create"
+                ],
+                "summary": "Create new orders",
+                "parameters": [
+                    {
+                        "description": "Create orders",
+                        "name": "customerName",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Order"
+                        }
+                    },
+                    {
+                        "description": "Create orders",
+                        "name": "orderedAt",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Order"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.InsertNewOrder"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.InsertNewOrder"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.InsertNewOrder"
+                        }
+                    }
+                }
             }
+        },
+        "/orders/{id}": {
+            "get" : {
+                "description": "Get order by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders",
+                    "list"
+                ],
+                "summary": "List orders by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "order ID",
+                        "name": "orderID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Orders"
+                        }
+                    }
+                }
+            },
+            "put" : {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Update a single order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "Update Orders",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "order ID",
+                        "name": "orderID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type" : "string",
+                        "description": "customer name",
+                        "name": "customerName",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Order"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.UpdateOrderByID"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.UpdateOrderByID"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.UpdateOrderByID"
+                        }
+                    }
+                }
+            },
+            "delete" : {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Delete an order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "Delete Order",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "order ID",
+                        "name": "orderID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.DeleteOrder"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions//controllers.DeleteOrder"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions//controllers.DeleteOrder"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "main": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type" : "integer"
+                },
+                "expire" : {
+                    "type" : "date"
+                },
+                "token" : {
+                    "type" : "string"
+                }
+            }
+        },
+        "models.Order": {
+            "type" : "object",
+            "properties": {
+                "orderID" : {
+                    "type" : "integer"
+                },
+                "customerName" : {
+                    "type" : "string"
+                },
+                "orderedAt" : {
+                    "type" : "string"
+                },
+                "items" : {
+                    "type" : "array"
+                }
+            }
+        },
+        "controllers.InsertNewOrder": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "status" : {
+                        "type" : "string"
+                    },
+                    "order" : {
+                        "type" : "string"
+                    }  
+                }
+            }
+        },
+        "controllers.UpdateOrder": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "status" : {
+                        "type" : "string"
+                    },
+                    "order" : {
+                        "type" : "string"
+                    }  
+                }
+            }
+        },
+        "controllers.DeleteOrder":{
+            "type": "object",
+            "properties": {
+                "order": {
+                    "status" : {
+                        "type" : "string"
+                    }
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "bearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
